--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "server": "webpack-dev-server --open",
-    "dev": "cross-env NODE_ENV=development webpack",
+    "dev": "webpack --mode development",
     "build": "cross-env NODE_ENV=production webpack"
   },
   "repository": {
